# dot-dabstep-eval

./: .env.example  .gitignore  CLAUDE.md  CODE_CHANGES_AND_ITERATION_PLAN.md  CONTEXT_AUDIT.md  CONTEXT_UPDATE_LOG_LOOP_4.md  DELTA_REPORT_LOOP_4.md  DOT_INSTRUCTIONS_OPTIMIZED.md  Dot Work Article 306ea9929df18080b0b7e437fdae7c3a.md  Dot Work Article.md  Dot_DABStep.pptx  Dot_DABStep_Controlled_Evaluation_Presentation.pptx  Dot_DABStep_Improved_Presentation.pptx  FAILURE_ANALYSIS_LOOP_3.md  ITERATION_REPORT.md  Makefile  README.md  context_snapshot.md  context_snapshot_full.md  context_snapshot_v2.md  dev_answerer.py  human_suggestions.md  make_full_submission_jsonl.py  pyproject.toml  submission.csv  submission_full.jsonl  submission_full3rdAttemptrandom032.78.4.2.jsonl  submission_fullCattempt278476.jsonl  submission_full_1stAtest-random,test,2.78.463.jsonl  submission_full_2ndAttemptrandom02,2,78,4,5.jsonl
.claude/: settings.local.json
artifacts/: claude_answers_dev.jsonl  dev10_offline_results.jsonl  dev_eval_report_v2.md  dot_context_diff.md  dot_context_diff_v2.md  dot_context_updated.md  dot_context_updated_v2.md  dot_superset_instruction_set.md  micro_dev_baseline.jsonl  q1681_only.jsonl  score_history.json  submission_target30_v2.jsonl  superset_failure_analysis.md  target30_preview.md
notes/: next_steps.md
scripts/: build_datasource.py  offline_solver.py
src/: analyze_failures.py  async_runner.py  dabstep_loader.py  dot_client.py  failure_report.py  iterate_loop.py  make_submission_csv.py  prompting.py  runner.py  scoring.py
tests/: test_dot_client.py  (+7 more)
(+126 files in other folders)
