[project]
name = "dabstep-eval"
version = "0.1.0"
description = "Evaluation harness for Dot on DABStep benchmark"
requires-python = ">=3.10"
dependencies = [
    "datasets>=2.14",
    "httpx>=0.25",
    "pandas>=2.1",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4,<0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
